--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
@@ -175,12 +175,14 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="Clock.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
