--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj.filters
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj.filters
@@ -28,12 +28,12 @@
     <Filter Include="UI">
       <UniqueIdentifier>{a357063a-dc7d-4315-850c-b4ec802dc5c6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Time">
+      <UniqueIdentifier>{6b4fb69f-48c4-4e3f-a1df-e0b6104085a6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameState.cpp">
@@ -44,6 +44,12 @@
     </ClCompile>
     <ClCompile Include="PlayState.cpp">
       <Filter>GameState\PlayState</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>GameState</Filter>
+    </ClCompile>
+    <ClCompile Include="Clock.cpp">
+      <Filter>Time</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +64,9 @@
     </ClInclude>
     <ClInclude Include="PlayState.h">
       <Filter>GameState\PlayState</Filter>
+    </ClInclude>
+    <ClInclude Include="Clock.h">
+      <Filter>Time</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
