--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
@@ -171,7 +171,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="LoadState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -179,7 +181,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="LoadState.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Clock.h" />
