Added debugging head Working on threading

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/link.command.1.tlo
 Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/link.read.1.tlog
 Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/link.write.1.tlog
 Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/Template.lastbuildstate
+Mall_Game/Mall_Game/SFML/CodePC/.vs/Mall_Game/v16/ipch/AutoPCH/2ab0e82d48d7e1c9/DEBUGGING.ipch
