--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Debugging.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
