Added Math Header, Added prinf functions to Debugging.h

--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="LoadState.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Clock.h" />
