-Ignored Browse.db -Fixed bug in loadState

--- a/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj.filters
+++ b/Mall_Game/Mall_Game/SFML/CodePC/MainProgram/MainProgram.vcxproj.filters
@@ -60,11 +60,11 @@
     <ClCompile Include="Clock.cpp">
       <Filter>Time</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="LoadState.cpp">
       <Filter>GameState\LoadState</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -83,9 +83,6 @@
     <ClInclude Include="Clock.h">
       <Filter>Time</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="LoadState.h">
       <Filter>GameState\LoadState</Filter>
     </ClInclude>
@@ -94,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="Math.h">
       <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
