--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/link.read.1.tlog
 Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/link.write.1.tlog
 Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/Template.tlog/Template.lastbuildstate
 Mall_Game/Mall_Game/SFML/CodePC/.vs/Mall_Game/v16/ipch/AutoPCH/2ab0e82d48d7e1c9/DEBUGGING.ipch
+Mall_Game/Mall_Game/SFML/CodePC/.vs/Mall_Game/v16/Browse.VC.db
+Mall_Game/Mall_Game/SFML/CodePC/.vs/Mall_Game/v16/Browse.VC.opendb
+Mall_Game/Mall_Game/SFML/Obj/x64/Template/Debug/vc142.idb
